--- a/parse-image-POC/requirements.txt
+++ b/parse-image-POC/requirements.txt
@@ -20,8 +20,6 @@ fonttools==4.39.4
     # via matplotlib
 idna==3.4
     # via requests
-imagehash==4.3.1
-    # via -r requirements.in
 jinja2==3.1.2
     # via torch
 kiwisolver==1.4.4
@@ -36,14 +34,14 @@ mpmath==1.3.0
     # via sympy
 networkx==3.1
     # via torch
+noise==1.2.2
+    # via -r requirements.in
 numpy==1.24.3
     # via
     #   contourpy
-    #   imagehash
     #   matplotlib
     #   opencv-python
     #   pandas
-    #   pywavelets
     #   scipy
     #   seaborn
     #   torchvision
@@ -57,7 +55,6 @@ pandas==2.0.1
     #   ultralytics
 pillow==9.5.0
     # via
-    #   imagehash
     #   matplotlib
     #   torchvision
     #   ultralytics
@@ -71,8 +68,6 @@ python-dateutil==2.8.2
     #   pandas
 pytz==2023.3
     # via pandas
-pywavelets==1.4.1
-    # via imagehash
 pyyaml==6.0
     # via ultralytics
 requests==2.31.0
@@ -80,9 +75,7 @@ requests==2.31.0
     #   torchvision
     #   ultralytics
 scipy==1.10.1
-    # via
-    #   imagehash
-    #   ultralytics
+    # via ultralytics
 seaborn==0.12.2
     # via ultralytics
 sentry-sdk==1.24.0
@@ -93,10 +86,13 @@ sympy==1.12
     # via torch
 torch==2.0.1
     # via
+    #   -r requirements.in
     #   torchvision
     #   ultralytics
 torchvision==0.15.2
-    # via ultralytics
+    # via
+    #   -r requirements.in
+    #   ultralytics
 tqdm==4.65.0
     # via ultralytics
 typing-extensions==4.6.1
