--- a/parse-image-POC/requirements.txt
+++ b/parse-image-POC/requirements.txt
@@ -4,19 +4,19 @@
 #
 #    pip-compile requirements.in
 #
-certifi==2023.5.7
-    # via
-    #   requests
-    #   sentry-sdk
-charset-normalizer==3.1.0
+-e file:///Users/danielwaltrip/all-files/projects/code/my-ml-utils
+    # via -r requirements.in
+certifi==2023.7.22
     # via requests
-contourpy==1.0.7
+charset-normalizer==3.2.0
+    # via requests
+contourpy==1.1.0
     # via matplotlib
 cycler==0.11.0
     # via matplotlib
-filelock==3.12.0
+filelock==3.12.2
     # via torch
-fonttools==4.39.4
+fonttools==4.42.0
     # via matplotlib
 idna==3.4
     # via requests
@@ -24,10 +24,11 @@ jinja2==3.1.2
     # via torch
 kiwisolver==1.4.4
     # via matplotlib
-markupsafe==2.1.2
+markupsafe==2.1.3
     # via jinja2
-matplotlib==3.7.1
+matplotlib==3.7.2
     # via
+    #   my-ml-utils
     #   seaborn
     #   ultralytics
 mpmath==1.3.0
@@ -36,29 +37,33 @@ networkx==3.1
     # via torch
 noise==1.2.2
     # via -r requirements.in
-numpy==1.24.3
+numpy==1.25.2
     # via
     #   contourpy
     #   matplotlib
+    #   my-ml-utils
     #   opencv-python
     #   pandas
     #   scipy
     #   seaborn
     #   torchvision
-opencv-python==4.7.0.72
+    #   ultralytics
+opencv-python==4.8.0.74
     # via ultralytics
 packaging==23.1
     # via matplotlib
-pandas==2.0.1
+pandas==2.0.3
     # via
     #   seaborn
     #   ultralytics
-pillow==9.5.0
+pillow==10.0.0
     # via
     #   matplotlib
     #   torchvision
     #   ultralytics
 psutil==5.9.5
+    # via ultralytics
+py-cpuinfo==9.0.0
     # via ultralytics
 pyparsing==3.0.9
     # via matplotlib
@@ -68,17 +73,15 @@ python-dateutil==2.8.2
     #   pandas
 pytz==2023.3
     # via pandas
-pyyaml==6.0
+pyyaml==6.0.1
     # via ultralytics
 requests==2.31.0
     # via
     #   torchvision
     #   ultralytics
-scipy==1.10.1
+scipy==1.11.1
     # via ultralytics
 seaborn==0.12.2
-    # via ultralytics
-sentry-sdk==1.24.0
     # via ultralytics
 six==1.16.0
     # via python-dateutil
@@ -87,23 +90,25 @@ sympy==1.12
 torch==2.0.1
     # via
     #   -r requirements.in
+    #   my-ml-utils
     #   torchvision
     #   ultralytics
 torchinfo==1.8.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   my-ml-utils
 torchvision==0.15.2
     # via
     #   -r requirements.in
+    #   my-ml-utils
     #   ultralytics
 tqdm==4.65.0
     # via ultralytics
-typing-extensions==4.6.1
+typing-extensions==4.7.1
     # via torch
 tzdata==2023.3
     # via pandas
-ultralytics==8.0.107
+ultralytics==8.0.149
     # via -r requirements.in
-urllib3==1.26.16
-    # via
-    #   requests
-    #   sentry-sdk
+urllib3==2.0.4
+    # via requests
