--- a/parse-image-POC/requirements.txt
+++ b/parse-image-POC/requirements.txt
@@ -30,6 +30,7 @@ markupsafe==2.1.2
     # via jinja2
 matplotlib==3.7.1
     # via
+    #   -r requirements.in
     #   seaborn
     #   ultralytics
 mpmath==1.3.0
@@ -38,6 +39,7 @@ networkx==3.1
     # via torch
 numpy==1.24.3
     # via
+    #   -r requirements.in
     #   contourpy
     #   imagehash
     #   matplotlib
@@ -93,10 +95,13 @@ sympy==1.12
     # via torch
 torch==2.0.1
     # via
+    #   -r requirements.in
     #   torchvision
     #   ultralytics
 torchvision==0.15.2
-    # via ultralytics
+    # via
+    #   -r requirements.in
+    #   ultralytics
 tqdm==4.65.0
     # via ultralytics
 typing-extensions==4.6.1
