--- a/parse-image-POC/requirements.txt
+++ b/parse-image-POC/requirements.txt
@@ -26,6 +26,8 @@ jinja2==3.1.2
     # via torch
 kiwisolver==1.4.4
     # via matplotlib
+markdown-it-py==3.0.0
+    # via rich
 markupsafe==2.1.2
     # via jinja2
 matplotlib==3.7.1
@@ -33,6 +35,8 @@ matplotlib==3.7.1
     #   -r requirements.in
     #   seaborn
     #   ultralytics
+mdurl==0.1.2
+    # via markdown-it-py
 mpmath==1.3.0
     # via sympy
 networkx==3.1
@@ -65,6 +69,8 @@ pillow==9.5.0
     #   ultralytics
 psutil==5.9.5
     # via ultralytics
+pygments==2.16.1
+    # via rich
 pyparsing==3.0.9
     # via matplotlib
 python-dateutil==2.8.2
@@ -81,6 +87,8 @@ requests==2.31.0
     # via
     #   torchvision
     #   ultralytics
+rich==13.5.2
+    # via -r requirements.in
 scipy==1.10.1
     # via
     #   imagehash
