Giant rebase + squash - Code from direct grid detection attempts

--- a/parse-image-POC/requirements.in
+++ b/parse-image-POC/requirements.in
@@ -1,8 +1,11 @@
-imagehash
 matplotlib
+noise
 numpy
 ptpython
 rich
 torch
+torchinfo
 torchvision
 ultralytics
+
+-e file:///Users/danielwaltrip/all-files/projects/code/my-ml-utils
