--- a/parse-image-POC/requirements.txt
+++ b/parse-image-POC/requirements.txt
@@ -4,26 +4,24 @@
 #
 #    pip-compile requirements.in
 #
+-e file:///Users/danielwaltrip/all-files/projects/code/my-ml-utils
+    # via -r requirements.in
 appdirs==1.4.4
     # via ptpython
 certifi==2023.5.7
-    # via
-    #   requests
-    #   sentry-sdk
-charset-normalizer==3.1.0
     # via requests
-contourpy==1.0.7
+charset-normalizer==3.2.0
+    # via requests
+contourpy==1.1.0
     # via matplotlib
 cycler==0.11.0
     # via matplotlib
-filelock==3.12.0
+filelock==3.12.2
     # via torch
-fonttools==4.39.4
+fonttools==4.42.0
     # via matplotlib
 idna==3.4
     # via requests
-imagehash==4.3.1
-    # via -r requirements.in
 jedi==0.19.0
     # via ptpython
 jinja2==3.1.2
@@ -32,11 +30,12 @@ kiwisolver==1.4.4
     # via matplotlib
 markdown-it-py==3.0.0
     # via rich
-markupsafe==2.1.2
+markupsafe==2.1.3
     # via jinja2
-matplotlib==3.7.1
+matplotlib==3.7.2
     # via
     #   -r requirements.in
+    #   my-ml-utils
     #   seaborn
     #   ultralytics
 mdurl==0.1.2
@@ -45,31 +44,32 @@ mpmath==1.3.0
     # via sympy
 networkx==3.1
     # via torch
-numpy==1.24.3
+noise==1.2.2
+    # via -r requirements.in
+numpy==1.25.2
     # via
     #   -r requirements.in
     #   contourpy
-    #   imagehash
     #   matplotlib
+    #   my-ml-utils
     #   opencv-python
     #   pandas
-    #   pywavelets
     #   scipy
     #   seaborn
     #   torchvision
-opencv-python==4.7.0.72
+    #   ultralytics
+opencv-python==4.8.0.74
     # via ultralytics
 packaging==23.1
     # via matplotlib
-pandas==2.0.1
+pandas==2.0.3
     # via
     #   seaborn
     #   ultralytics
 parso==0.8.3
     # via jedi
-pillow==9.5.0
+pillow==10.0.0
     # via
-    #   imagehash
     #   matplotlib
     #   torchvision
     #   ultralytics
@@ -79,6 +79,8 @@ psutil==5.9.5
     # via ultralytics
 ptpython==3.0.23
     # via -r requirements.in
+py-cpuinfo==9.0.0
+    # via ultralytics
 pygments==2.16.1
     # via
     #   ptpython
@@ -91,9 +93,7 @@ python-dateutil==2.8.2
     #   pandas
 pytz==2023.3
     # via pandas
-pywavelets==1.4.1
-    # via imagehash
-pyyaml==6.0
+pyyaml==6.0.1
     # via ultralytics
 requests==2.31.0
     # via
@@ -101,13 +101,9 @@ requests==2.31.0
     #   ultralytics
 rich==13.5.2
     # via -r requirements.in
-scipy==1.10.1
-    # via
-    #   imagehash
-    #   ultralytics
-seaborn==0.12.2
+scipy==1.11.1
     # via ultralytics
-sentry-sdk==1.24.0
+seaborn==0.12.2
     # via ultralytics
 six==1.16.0
     # via python-dateutil
@@ -116,23 +112,27 @@ sympy==1.12
 torch==2.0.1
     # via
     #   -r requirements.in
+    #   my-ml-utils
     #   torchvision
     #   ultralytics
+torchinfo==1.8.0
+    # via
+    #   -r requirements.in
+    #   my-ml-utils
 torchvision==0.15.2
     # via
     #   -r requirements.in
+    #   my-ml-utils
     #   ultralytics
 tqdm==4.65.0
     # via ultralytics
-typing-extensions==4.6.1
+typing-extensions==4.7.1
     # via torch
 tzdata==2023.3
     # via pandas
-ultralytics==8.0.107
+ultralytics==8.0.149
     # via -r requirements.in
 urllib3==1.26.16
-    # via
-    #   requests
-    #   sentry-sdk
+    # via requests
 wcwidth==0.2.6
     # via prompt-toolkit
